# COMP2811

./: CMakeLists.txt  CMakeLists.txt.qt6_6  CMakeLists.txt.qt6_7  README.md  circle.cpp  circle.hpp  form.cpp  form.hpp  form_fr.ts  main.cpp  rect.cpp  rect.hpp  shape.hpp  shapedemo.cpp  testrect.cpp
